theme select box alignment fixed

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -16,7 +16,7 @@
 
     .rightnav {
         display: flex;
-        width: 7%;
+        width: 15%;
         justify-content: space-between;
     }
 }
@@ -29,7 +29,15 @@
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
+    .nav {
+        .rightnav {
+            width: 30%;
+        }
+    }
+}
+
+@media only screen and (max-width: 440px) {
     .nav {
         flex-wrap: wrap;
         padding: 1rem 0;
